# code-app

./: dev.sh  docker-compose.yml
.agent/workflows/: run_app.md
backend/: Dockerfile  ai_service.py  auth.py  database.db  database.py  main.py  migrate_db.py  modal_app.py  models.py  pyproject.toml
backend/routers/: ai.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AIChatPanel.tsx  CodeEditor.tsx  ExercisePreview.tsx  MarkdownViewer.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: exercises.ts
frontend/src/pages/: CodingPage.tsx  CoursesPage.tsx  Login.tsx  Signup.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  CourseEditor.tsx
frontend/src/services/: aiService.ts
sandbox/: Dockerfile
tests/: test_rust_course.py
